compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_unknown_imported_value.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/unknown_imported_value.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unknown imported value
   ╭─[tests/fixtures/diagnostics/types/unknown_imported_value.ml:4:15]
 3 │ fn main() {
 4 │   let value = Result.missing;
   ·               ───────┬──────
   ·                      ╰── module `Result` does not export `missing`
 5 │   println("bad")
   ╰────
  help: check the producer .rsig
